# Flask-Router

./: README.md  app.py  auth.py  database.py  foo.db  models.py  pyproject.toml  quart.conf
flask_router/: __init__.py
router/: __init__.py
routes/: __init__.py  index.py
routes/about/: __init__.py
routes/about/companies/: __init__.py
routes/about/companies/[int:id]/: __init__.py
routes/login/: __init__.py  ah.py
routes/login/[int:id]/: __init__.py
routes/logout/: __init__.py
routes/prices/: __index__.py
routes/products/: index.py
routes/products/[int:id]/: __index__.py
routes/products/[string:name]/: index.py
routes/signin/: __init__.py
routes/xml/: __init__.py
templates/: index.html  login.html
